fix bug 20891 [Assertion when displaying message], don't try to find a drive in an empty path, r=putterman@netscape.com